k8s/keycloak/keycloak-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloak
  name: keycloak
  namespace: default
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      # volumes:
      #   - name: certifications-volume
      #     secret:
      #       secretName: pki-secret
      containers:
        - env:
            - name: KC_BOOTSTRAP_ADMIN_USERNAME
              valueFrom:
                secretKeyRef:
                  key: keycloak_admin
                  name: keycloak-secret
            - name: KC_BOOTSTRAP_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: keycloak_admin_password
                  name: keycloak-secret
            - name: KC_DB_URL_HOST
              valueFrom:
                secretKeyRef:
                  key: db_url
                  name: keycloak-secret
            - name: KC_DB_USERNAME
              valueFrom:
                secretKeyRef:
                  key: db_username
                  name: keycloak-secret
            - name: KC_DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: db_password
                  name: keycloak-secret
          args:
            - start-dev
            - --hostname=keycloak.monarka.local
            - --hostname-strict=false
            - --proxy-headers=xforwarded
            - --http-enabled=true
          #   - --https-certificate-file=/etc/x509/https/tls.crt
          #   - --https-certificate-key-file=/etc/x509/https/tls.key
          #   - --verbose
          image: 'quay.io/keycloak/keycloak:26.0.6'
          imagePullPolicy: Always
          name: keycloak
          # volumeMounts:
          #   - name: certifications-volume
          #     mountPath: '/etc/x509/https'
          #     readOnly: true
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
