k8s/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      automountServiceAccountToken: false
      containers:
        - name: keycloak
          image: bitnami/keycloak:26
          args:
            [
              'start',
              '--cache-stack=kubernetes',
              '--spi-login-protocol-openid-connect-legacy-logout-redirect-uri=true',
            ]
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
spec:
  type: ClusterIP
  ClusterIP: None
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8484
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443
