k8s/keycloak/keycloak-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      automountServiceAccountToken: false
      containers:
        - name: keycloak-db
          image: bitnami/postgresql:14
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db-service
spec:
  selector:
    app: keycloak-db
  ports:
    - port: 5432
