k8s/keycloak/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak
  namespace: default
spec:
  ports:
    - name: http
      port: 31716
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 30693
      protocol: TCP
      targetPort: 8443
  selector:
    app: keycloak
  type: NodePort
